# ungoogled-chromium-windows

./: README.md  build.py  flags.windows.avx.gn  flags.windows.avx2.gn  flags.windows.avx512.gn  flags.windows.gn
.github/actions/stage/: action.yml  index.js  package.json
.github/actions/winget/: action.yml  package.json
.github/workflows/: build-stage.yml  main.yml
patches/: series  series.avx  series.avx2  series.avx512
patches/chromium-clang/: chromium-clang-base-optimizations.patch  win64-avx.patch  win64-avx2.patch  win64-avx512.patch
patches/ungoogled-chromium/windows/: windows-enable-avx.patch  windows-enable-avx2.patch  windows-enable-avx512.patch  windows-enable-fp-contract-fast.patch  windows-enable-lto-optimizations.patch  windows-enable-o3-optimization.patch  windows-enable-sized-deallocation.patch  windows-fp-contract-fast.patch  windows-hevc-ffmpeg-support.patch  windows-llvm-loop-optimizations.patch  windows-mini-installer-memcpy.patch  windows-v8-warn-about-builtin-profile-data.patch  windows-webrtc-h265-features.patch
