# Base build configuration
chrome_pgo_phase=2
enable_swiftshader=false
ffmpeg_branding="Chrome"
is_clang=true
is_component_build=false
is_debug=false
is_official_build=true
proprietary_codecs=true
target_cpu="x64"
use_sysroot=false
dcheck_always_on=false
blink_symbol_level=0
v8_symbol_level=0
symbol_level=0
enable_rust=true
enable_mse_mpeg2ts_stream_parser=true
cc_wrapper="sccache"

# Thorium/Chromium_Clang build optimizations
use_thin_lto=true
thin_lto_enable_optimizations=true
thin_lto_enable_cache=false
enable_stripping=true
exclude_unwind_tables=true
enable_iterator_debugging=false
disable_fieldtrial_testing_config=true
win_enable_cfg_guards=true
use_lld=true
use_icf=true
treat_warnings_as_errors=false
clang_use_chrome_plugins=true
enable_resource_allowlist_generation=false
use_text_section_splitting=true
init_stack_vars_zero=true
toolchain_supports_rust_thin_lto=true

# V8 optimizations
v8_enable_fast_torque=true
v8_enable_builtins_optimization=true
v8_enable_maglev=true
v8_enable_turbofan=true
v8_enable_wasm_simd256_revec=true
use_v8_context_snapshot=true

# Media/FFmpeg optimizations
media_use_ffmpeg=true
media_use_libvpx=true
enable_hls_demuxer=true
enable_ffmpeg_video_decoders=true
is_component_ffmpeg=false
use_webaudio_pffft=true

# Codec support
enable_platform_hevc=true
enable_hevc_parser_and_hw_decoder=true
platform_has_optional_hevc_decode_support=true
platform_has_optional_hevc_encode_support=true
enable_platform_ac3_eac3_audio=true
enable_platform_dolby_vision=true
enable_platform_encrypted_dolby_vision=true
enable_platform_mpeg_h_audio=true
enable_platform_dts_audio=true

# WebRTC optimizations
rtc_use_h264=true
rtc_use_h265=true
rtc_build_examples=false
rtc_enable_avx2=true

# Widevine/CDM support
enable_library_cdms=true
enable_widevine=true
bundle_widevine_cdm=true
enable_cdm_storage_id=true
enable_widevine_cdm_host_verification=true
ignore_missing_widevine_signing_cert=true
enable_media_drm_storage=true
enable_media_foundation_widevine_cdm=true

# Other optimizations
optimize_webui=true
enable_precompiled_headers=false
enable_vr=true
