# Base build configuration
chrome_pgo_phase=2
enable_swiftshader=false
ffmpeg_branding="Chrome"
is_clang=true
is_component_build=false
is_debug=false
is_official_build=true
proprietary_codecs=true
target_cpu="x64"
use_sysroot=false
dcheck_always_on=false
blink_symbol_level=0
v8_symbol_level=0
symbol_level=0
enable_rust=true
enable_mse_mpeg2ts_stream_parser=true
cc_wrapper="sccache"

# Chromium_Clang build optimizations
use_thin_lto=true
thin_lto_enable_optimizations=true
thin_lto_enable_cache=false
enable_stripping=true
exclude_unwind_tables=true
enable_iterator_debugging=false
disable_fieldtrial_testing_config=true
win_enable_cfg_guards=true
use_lld=true
use_icf=true
treat_warnings_as_errors=false
clang_use_chrome_plugins=false
enable_resource_allowlist_generation=false
toolchain_supports_rust_thin_lto=true

# Other optimizations
optimize_webui=true
enable_precompiled_headers=false

